--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "19.0.2",
     "postcss": "8.4.49",
+    "prisma": "^6.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
