--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,8 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "prisma": "^6.5.0"
+  },
+  "scripts": {
+    "postinstall": "prisma generate"
   }
 }
